# qml-module-lliurex-ui

./: CMakeLists.txt
debian/: changelog  control  copyright  qml6-module-lliurex-ui.install
noise/: CMakeLists.txt  noise.cpp  noise.h  plugin.cpp  plugin.h  qmldir  texture.cpp  texture.h
ui/: 3dstuff.js  Background.qml  Window.qml  qmldir  scenes.js
